--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,8 @@
 
   <footer class="footer">
   <small>
-    The <a href="#">Best Designers in Porto</a>
-    by <a href="http://www.wiremaze.com/">Site by WIREMAZE</a>
+    The <a href="http://www.wiremaze.com/equipa.html">Best Designers in Porto</a></t></t>
+    <a href="http://www.wiremaze.com/">Site by WIREMAZE</a>
   </small>
   <nav>
     <ul>
