--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -46,7 +46,7 @@
     <div class = "col-md-6" style="
     padding-left: 0px;">
       <div class = "col-md-3">
-        <%= f.association :city, label_method: :city_name, value_method: :id , required: true %>
+        <%= f.association :city, label_method: :city_name, value_method: :id  %>
       </div>
       
     </div>
@@ -85,7 +85,7 @@
       
       <div class = "col-md-6" style="padding-left: 0px;">
         <div class = "col-md-4">
-        <%= f.association :profession, label_method: :area_name, value_method: :id , required: true %>
+        <%= f.association :profession, label_method: :area_name, value_method: :id  %>
         </div>
       </div>
       
