--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -500,6 +500,11 @@ span.picture {
   height: 500px;
 }
 
+.CSSAnimationChart2 {
+  width: 100%;
+  height: 600px;
+}
+
 .knet-header {
   height: 60px
 }
@@ -558,9 +563,8 @@ hr.ustayrac {
 .scv-home-search input[type="text"] {
   float: left;
   height: 60px;
-
   font-size: 16px;
-  color: wheat;
+
 }
 
 
