--- a/app/views/backoffice/index_notices.html.erb
+++ b/app/views/backoffice/index_notices.html.erb
@@ -1,5 +1,12 @@
 <h1>Listing Notices</h1>
-
+<div class="col-md-12">
+		<%= form_tag(backoffice_notices_all_path, :method => "get", id: "search-form") do %>
+			<br>
+			<div class="col-md-5"><%= text_field_tag :search, params[:search], placeholder: "Search Users" , class: "form-control" %>   </div>
+		
+			<div class="col-md-3"><%= submit_tag "Search", class: "btn btn-primary  btn-md" %></div>	
+		<% end %>  
+	</div>
 <div class ="result_list">
       <%= render 'notices' %>
   </div>
