--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,21 +1,19 @@
 <h1>Listing Companies</h1>
 <br>
 <br>
-<div class = "col-md-3" style="
-    margin-bottom: 200px;
-">
+<div class = "col-md-3" style="margin-bottom: 200px;">
   <%= form_tag(companies_path, :method => "get", id: "search-form") do %>
-    <br>
-    <%= text_field_tag :search, params[:search], placeholder: "Search Companies" , class: "form-control" %>   
-    <br>
-      <span class="label label-default">Select Profession area</span>
-      <%= select_tag "profession", (options_from_collection_for_select(professions, "id", "area_name", @prev_profession)).html_safe, prompt: "Select Profession" , class: "form-control" %>
-    <br>
-    <span class="label label-default">Select City </span>
-    <%= select_tag "city", (options_from_collection_for_select(cities, "id", "city_name", @prev_city)).html_safe ,prompt: "Select City", class: "form-control" %>
-      <br>
-      <%= submit_tag "Search", class: "btn btn-primary  btn-md" %>
-    <br>
+  <br>
+  <%= text_field_tag :search, params[:search], placeholder: "Search Companies" , class: "form-control" %>   
+  <br>
+  <span class="label label-default">Select Profession area</span>
+  <%= select_tag "profession", (options_from_collection_for_select(professions, "id", "area_name", @prev_profession)).html_safe, prompt: "Select Profession" , class: "form-control" %>
+  <br>
+  <span class="label label-default">Select City </span>
+  <%= select_tag "city", (options_from_collection_for_select(cities, "id", "city_name", @prev_city)).html_safe ,prompt: "Select City", class: "form-control" %>
+  <br>
+  <%= submit_tag "Search", class: "btn btn-primary  btn-md" %>
+  <br>
   <% end %>  
 </div>
 <br>
@@ -24,10 +22,10 @@
   <label style="font-size: 12pt; color: #626262; padding-left: 10px;"><%= @companies.count%> Company found</label>
   
   <div style="margin: 9px 0 9px">
-        <hr class="ustayrac">
+    <hr class="ustayrac">
   </div>
   <div class ="result_list">
-      <%= render 'companies' %>
+    <%= render 'companies' %>
   </div>
   
 </div>
