--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -6,7 +6,7 @@
     <div class= "portlet light bordered">
       <div class="portlet-title">
         <div class="caption font-dark">
-          <span class="caption-subject bold uppercase">Top Stories</span>
+          <span class="caption-subject bold uppercase">Top News</span>
         </div>
       </div>
       
